<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin16"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/polygons_image_view"
        android:layout_width="wrap_content"
        android:layout_height="194dp"
        android:contentDescription="@string/polygon"
        android:scaleType="centerCrop"
        android:src="@drawable/polygon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <LinearLayout
        android:id="@+id/input_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/polygons_image_view"
        app:layout_constraintStart_toStartOf="@id/polygons_image_view"
        app:layout_constraintTop_toBottomOf="@id/polygons_image_view">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/side_length_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin16"
            android:layout_weight="1"
            android:hint="@string/side_length"
            app:startIconDrawable="@drawable/ic_side_length_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/side_length_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_of_sides_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin16"
            android:layout_weight="1"
            android:hint="@string/number_of_sides"
            app:startIconDrawable="@drawable/ic_number_of_sides_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_of_sides_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/calculate_textButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Calculate" />
    </LinearLayout>



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/input_linear_layout"
            android:layout_marginTop="@dimen/margin16">

            <!-- Bottom sheet contents. -->

            <TextView
                android:id="@+id/perimeter_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perimeter"
                android:textAppearance="?attr/textAppearanceBody1"/>

            <TextView
                android:layout_marginTop="@dimen/margin8"
                android:id="@+id/area_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textAppearance="?attr/textAppearanceBody1"/>

            <TextView
                android:layout_marginTop="@dimen/margin8"
                android:id="@+id/interior_angle_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interior_angle"
                android:textAppearance="?attr/textAppearanceBody1"/>


        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>